// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`top renders 0 1`] = `
Array [
  .c0 {
  top: 0;
}

<div
    className="c0"
  />,
  .c0 {
  top: 0;
}

<div
    className="c0"
  />,
  .c0 {
  top: 0;
}

<div
    className="c0"
  />,
  .c0 {
  top: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`top renders function 1`] = `
Array [
  .c0 {
  top: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  top: has;
}

<div
    className="c0"
  />,
  .c0 {
  top: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  top: has;
}

<div
    className="c0"
  />,
]
`;

exports[`top renders invalid theme path 1`] = `
Array [
  .c0 {
  top: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  top: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  top: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  top: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`top renders negative number 1`] = `
Array [
  .c0 {
  top: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  top: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  top: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  top: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`top renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  top: July;
}

@media screen and (min-width:November) {
  .c0 {
    top: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    top: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  top: July;
}

@media screen and (min-width:November) {
  .c0 {
    top: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    top: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  top: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    top: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    top: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  top: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    top: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    top: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`top renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    top: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    top: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    top: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    top: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    top: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    top: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    top: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    top: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    top: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`top renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  top: July;
}

@media May {
  .c0 {
    top: August;
  }
}

@media April {
  .c0 {
    top: September;
  }
}

@media January {
  .c0 {
    top: November;
  }
}

@media April {
  .c0 {
    top: August;
  }
}

@media June {
  .c0 {
    top: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  top: July;
}

@media May {
  .c0 {
    top: August;
  }
}

@media April {
  .c0 {
    top: September;
  }
}

@media January {
  .c0 {
    top: November;
  }
}

@media April {
  .c0 {
    top: August;
  }
}

@media June {
  .c0 {
    top: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  top: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    top: November;
  }
}

@media April {
  .c0 {
    top: January;
  }
}

@media January {
  .c0 {
    top: December;
  }
}

@media April {
  .c0 {
    top: April;
  }
}

@media June {
  .c0 {
    top: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  top: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    top: November;
  }
}

@media April {
  .c0 {
    top: January;
  }
}

@media January {
  .c0 {
    top: December;
  }
}

@media April {
  .c0 {
    top: April;
  }
}

@media June {
  .c0 {
    top: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`top renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    top: July;
  }
}

@media April {
  .c0 {
    top: August;
  }
}

@media January {
  .c0 {
    top: September;
  }
}

@media April {
  .c0 {
    top: November;
  }
}

@media June {
  .c0 {
    top: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    top: July;
  }
}

@media April {
  .c0 {
    top: August;
  }
}

@media January {
  .c0 {
    top: September;
  }
}

@media April {
  .c0 {
    top: November;
  }
}

@media June {
  .c0 {
    top: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    top: January;
  }
}

@media April {
  .c0 {
    top: December;
  }
}

@media January {
  .c0 {
    top: April;
  }
}

@media April {
  .c0 {
    top: May;
  }
}

@media June {
  .c0 {
    top: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    top: January;
  }
}

@media April {
  .c0 {
    top: December;
  }
}

@media January {
  .c0 {
    top: April;
  }
}

@media April {
  .c0 {
    top: May;
  }
}

@media June {
  .c0 {
    top: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`top renders postitive number 1`] = `
Array [
  .c0 {
  top: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  top: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  top: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  top: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`top renders string 1`] = `
Array [
  .c0 {
  top: July;
}

<div
    className="c0"
  />,
  .c0 {
  top: July;
}

<div
    className="c0"
  />,
  .c0 {
  top: June;
}

<div
    className="c0"
  />,
  .c0 {
  top: June;
}

<div
    className="c0"
  />,
]
`;

exports[`top renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`top renders valid theme path 1`] = `
Array [
  .c0 {
  top: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  top: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  top: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  top: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
